<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:text="@string/tv1"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/det_tv1"
            android:layout_width="200dp"
            android:layout_height="37dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:text="@string/tv2"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/det_tv2"
            android:layout_width="200dp"
            android:layout_height="41dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:text="@string/tv3"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/det_tv3"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tv4"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/det_tv4"
            android:layout_width="191dp"
            android:layout_height="40dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:text="@string/tv5"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/det_tv5"
            android:layout_width="200dp"
            android:layout_height="37dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:text="@string/tv6"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/det_tv6"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/call" />

        <Button
            android:id="@+id/sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/sms" />
    </LinearLayout>
</LinearLayout>